--- a/app/config/parameters.yml
+++ b/app/config/parameters.yml
@@ -7,6 +7,6 @@ parameters:
     database_password: null
     mailer_transport: smtp
     mailer_host: 127.0.0.1
-    mailer_user: null
-    mailer_password: null
+    mailer_user: Florian@hotmail.ft
+    mailer_password: Florian
     secret: a0c90e60957d14449c6975d87a079c9107f2a4d0
